<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/arch"
        android:layout_centerInParent="true"
        android:layout_above="@+id/login"
        android:contentDescription="@string/icon"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        >
        <EditText
            android:id="@+id/dft_F_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:inputType="text"
            android:autofillHints=""
            android:layout_marginHorizontal="20dp"
            />
        <EditText
            android:id="@+id/dft_L_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:inputType="text"
            android:autofillHints=""
            android:layout_marginHorizontal="20dp"
            />
        <EditText
            android:id="@+id/dft_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_id"
            android:inputType="textEmailAddress"
            android:autofillHints=""
            android:layout_marginHorizontal="20dp"
            />
        <EditText
            android:id="@+id/daftar_Pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:autofillHints=""
            android:layout_marginHorizontal="20dp"
            />
        <EditText
            android:id="@+id/konfirmasi_Pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/retype_password"
            android:inputType="textPassword"
            android:autofillHints=""
            android:layout_marginHorizontal="20dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="20dp"
            >
            <RadioButton
                android:id="@+id/laki"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/laki"
                android:layout_marginRight="50dp"
                android:layout_marginEnd="50dp" />
            <RadioButton
                android:id="@+id/cewe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cewe"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        >
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/signup"
            android:textSize="20sp"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:layout_marginBottom="10sp"
            />
        <TextView
            android:id="@+id/login_now"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/already"
            android:textSize="10sp"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            tools:ignore="SmallSp"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>

</RelativeLayout>